--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">
-                <span class="sun-icon">🌞</span>
-                <span>Ambiente Libre</span>
-            </div>
-            <button class="hamburger" onclick="toggleMenu()">☰</button>
-            <ul class="nav-menu" id="navMenu">
-                <li><a href="#inicio" onclick="closeMenu()">Inicio</a></li>
-                <li><a href="#servicios" onclick="closeMenu()">Servicios</a></li>
-                <li><a href="#nosotros" onclick="closeMenu()">Nosotros</a></li>
-                <li><a href="#proyectos" onclick="closeMenu()">Proyectos</a></li>
-                <li><a href="#calculadora" onclick="closeMenu()">Calculadora</a></li>
-                <li><a href="#contacto" onclick="closeMenu()">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="header">
+    <nav class="nav-container">
+        <div class="logo">
+            <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image">
+            <span>Ambiente Libre</span>
+        </div>
+        <button class="hamburger" onclick="toggleMenu()">☰</button>
+        <ul class="nav-menu" id="navMenu">
+            <li><a href="#inicio" onclick="closeMenu()">Inicio</a></li>
+            <li><a href="#servicios" onclick="closeMenu()">Servicios</a></li>
+            <li><a href="#nosotros" onclick="closeMenu()">Nosotros</a></li>
+            <li><a href="#proyectos" onclick="closeMenu()">Proyectos</a></li>
+            <li><a href="#calculadora" onclick="closeMenu()">Calculadora</a></li>
+            <li><a href="#contacto" onclick="closeMenu()">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
 
     <!-- Hero Section -->
     <section id="inicio" class="hero">
