Se agrega link al logo y se borran servicios del footer

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <!-- Header -->
-<header class="header">
-    <nav class="nav-container">
+<header class="header">    <nav class="nav-container">
         <div class="logo">
-            <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image">
-            <span>Ambiente Libre</span>
+            <a href="#inicio" class="logo-link">
+                <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image"><span>Ambiente Libre</span>
+            </a>
         </div>
         <button class="hamburger" onclick="toggleMenu()">☰</button>
         <ul class="nav-menu" id="navMenu">
@@ -310,7 +310,7 @@
                     <h3>Ambiente Libre</h3>
                     <p>Soluciones fotovoltaicas profesionales para un futuro sostenible. Más de 4 años de experiencia en energía solar en México.</p>
                 </div>
-                <div class="footer-section">
+                <!-- <div class="footer-section">
                     <h3>Servicios</h3>
                     <ul>
                         <li>• Sistemas Residenciales</li>
@@ -320,7 +320,7 @@
                         <li>• Mantenimiento</li>
                         <li>• Monitoreo Remoto</li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <ul>
