se modifica titulo y kwp en hover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <!-- Header -->
-<header class="header">    <nav class="nav-container">
+<header class="header">    
+    <nav class="nav-container">
         <div class="logo">
             <a href="#inicio" class="logo-link">
                 <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image"><span>Ambiente Libre</span>
