--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="nav-container">
         <div class="logo">
             <a href="#inicio" class="logo-link">
-                <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image"><span>Ambiente Libre</span>
+                <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image"><span class="logo-text">Ambiente Libre</span>
             </a>
         </div>
         <button class="hamburger" onclick="toggleMenu()">☰</button>
@@ -269,7 +269,7 @@
                         <div class="contact-icon">📍</div>
                         <div>
                             <strong>Área de Servicio</strong><br>
-                            Hidalgo, CDMX, Estado de México y Querétaro
+                            Hidalgo, CDMX, Estado de México, Puebla, Querétaro y Veracruz
                         </div>
                     </div>
                     
