se arregla titulo y se agrega subtitulo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <nav class="nav-container">
         <div class="logo">
             <a href="#inicio" class="logo-link">
-                <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image"><span class="logo-text">Ambiente Libre</span>
+                <img src="img/logosf.png" alt="Ambiente Libre" class="logo-image">
+                <div class="logo-content">
+                    <span class="logo-text">Ambiente Libre</span>
+                    <div class="logo-subtitle">Sistemas fotovoltaicos</div>
+                </div>
             </a>
         </div>
         <button class="hamburger" onclick="toggleMenu()">☰</button>
