--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="projects-grid">
                 <div class="project-card" onclick="openGallery('textil')" style="cursor: pointer;">
                     <div class="project-image">
-                        <img src="img/zacualtipan.jpg" alt="Fábrica Textil Zacualtipán" class="project-img">
+                        <img src="img/textil/textil1.jpg" alt="Fábrica Textil" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Fábrica Textil</h3>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="project-card" onclick="openGallery('herrajes')" style="cursor: pointer;">
                     <div class="project-image">
-                        <img src="img/tepeapulco.jpg" alt="Fábrica de Herrajes Tepeapulco" class="project-img">
+                        <img src="img/herrajes/herrajes1.jpg" alt="Fábrica de Herrajes" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Fábrica de Herrajes</h3>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="project-card" onclick="openGallery('concretera')" style="cursor: pointer;">
                     <div class="project-image">
-                        <img src="img/mixquiahuala.jpg" alt="Concretera Mixquiahuala" class="project-img">
+                        <img src="img/concretera/concretera1.jpg" alt="Concretera" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Concretera</h3>
@@ -299,32 +299,12 @@
                 </div>
                 <div class="project-card" onclick="openGallery('pachuca')" style="cursor: pointer;">
                     <div class="project-image">
-                        <img src="img/pachuca.jpg" alt="Zona Metropolitana Pachuca" class="project-img">
+                        <img src="img/pachuca/pachuca1.jpg" alt="Zona Metropolitana Pachuca" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Zona Metropolitana Pachuca</h3>
                         <p><strong>Proyectos:</strong> 30+ sistemas</p>
                         <p>Múltiples instalaciones residenciales que han transformado la forma de consumir energía en hogares.</p>
-                    </div>
-                </div>
-                <div class="project-card" onclick="openGallery('residenciales')" style="cursor: pointer;">
-                    <div class="project-image">
-                        <div style="background: linear-gradient(45deg, #ff6b35, #f7931e); height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem;">🏠</div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Proyectos Residenciales</h3>
-                        <p><strong>Instalaciones:</strong> 30+ hogares</p>
-                        <p>Sistemas fotovoltaicos personalizados para viviendas familiares con tecnología de vanguardia y máximo ahorro energético.</p>
-                    </div>
-                </div>
-                <div class="project-card" onclick="openGallery('comerciales')" style="cursor: pointer;">
-                    <div class="project-image">
-                        <div style="background: linear-gradient(45deg, #2c5282, #87ceeb); height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem;">🏢</div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Proyectos Comerciales</h3>
-                        <p><strong>Empresas:</strong> 15+ comercios</p>
-                        <p>Soluciones energéticas para empresas y negocios que buscan reducir significativamente sus costos operativos.</p>
                     </div>
                 </div>
             </div>
