--- a/index.html
+++ b/index.html
@@ -80,52 +80,52 @@
                 <div class="benefits-container">
                     <div class="benefit-item">
                         <div class="benefit-icon">
-                            <svg viewBox="0 0 24 24" class="benefit-svg">
-                                <path fill="currentColor" d="M12 2L2 7V10C2 16 6 20.9 12 22C18 20.9 22 16 22 10V7L12 2M12 8V12L9.5 10.5L12 8Z"/>
-                            </svg>
+                            <img src="img/beneficios/produccion.png" alt="Producción de Energía" class="benefit-image">
                         </div>
-                        <h4>Producción de Energía</h4>
-                        <p>Genera tu propia energía y reduce la dependencia de la red eléctrica.</p>
+                        <div class="benefit-content">
+                            <h4>Producción de Energía</h4>
+                            <p>Genera tu propia energía y reduce la dependencia de la red eléctrica.</p>
+                        </div>
                     </div>
 
                     <div class="benefit-item">
                         <div class="benefit-icon">
-                            <svg viewBox="0 0 24 24" class="benefit-svg">
-                                <path fill="currentColor" d="M5 6H23V18H5C3.9 18 3 17.1 3 16V8C3 6.9 3.9 6 5 6M14 9C12.9 9 12 9.9 12 11S12.9 13 14 13 16 12.1 16 11 15.1 9 14 9Z"/>
-                            </svg>
+                            <img src="img/beneficios/ahorro.png" alt="Ahorro Económico" class="benefit-image">
                         </div>
-                        <h4>Ahorro Económico</h4>
-                        <p>Disminuye significativamente los pagos a CFE.</p>
+                        <div class="benefit-content">
+                            <h4>Ahorro Económico</h4>
+                            <p>Disminuye significativamente los pagos a CFE.</p>
+                        </div>
                     </div>
 
                     <div class="benefit-item">
                         <div class="benefit-icon">
-                            <svg viewBox="0 0 24 24" class="benefit-svg">
-                                <path fill="currentColor" d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2M21 9V7L15 1L13.5 2.5L16.17 5.17L10.58 10.76C10.22 10.54 9.82 10.4 9.39 10.4C8.24 10.4 7.4 11.5 7.4 12.4C7.4 13.4 8.24 14.4 9.39 14.4C10.54 14.4 11.4 13.4 11.4 12.4C11.4 12.1 11.3 11.9 11.2 11.6L12.81 10L17 14.2V22H15V16H9V22H7V14.2L3 10.2L4.4 8.8L7.58 12H9.17L15 6.17L21 9Z"/>
-                            </svg>
+                            <img src="img/beneficios/imagen.png" alt="Imagen Social" class="benefit-image">
                         </div>
-                        <h4>Imagen Social</h4>
-                        <p>Destaca como una empresa comprometida con el medio ambiente y la innovación.</p>
+                        <div class="benefit-content">
+                            <h4>Imagen Social</h4>
+                            <p>Destaca como una empresa comprometida con el medio ambiente y la innovación.</p>
+                        </div>
                     </div>
 
                     <div class="benefit-item">
                         <div class="benefit-icon">
-                            <svg viewBox="0 0 24 24" class="benefit-svg">
-                                <path fill="currentColor" d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.22,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.22,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/>
-                            </svg>
+                            <img src="img/beneficios/reduccion.png" alt="Reducción de CO2" class="benefit-image">
                         </div>
-                        <h4>Reducción de CO2</h4>
-                        <p>Contribuye al planeta con energía 100% limpia y renovable.</p>
+                        <div class="benefit-content">
+                            <h4>Reducción de CO2</h4>
+                            <p>Contribuye al planeta con energía 100% limpia y renovable.</p>
+                        </div>
                     </div>
 
                     <div class="benefit-item">
                         <div class="benefit-icon">
-                            <svg viewBox="0 0 24 24" class="benefit-svg">
-                                <path fill="currentColor" d="M19 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3M19 19H5V5H19V19M17 17H7V15H17V17M17 13H7V11H17V13M17 9H7V7H17V9Z"/>
-                            </svg>
+                            <img src="img/beneficios/beneficio.png" alt="Beneficio Fiscal" class="benefit-image">
                         </div>
-                        <h4>Beneficio Fiscal</h4>
-                        <p>Deduce el 100% de la inversión según el artículo 34, fracción XIII de la Ley del ISR.</p>
+                        <div class="benefit-content">
+                            <h4>Beneficio Fiscal</h4>
+                            <p>Deduce el 100% de la inversión según el artículo 34, fracción XIII de la Ley del ISR.</p>
+                        </div>
                     </div>
                 </div>
             </div>
