Se modifica seccion servicios adicionales y se agrega logo de cfe

--- a/index.html
+++ b/index.html
@@ -167,27 +167,37 @@
             <!-- Servicios Complementarios -->
             <div class="secondary-services">
                 <div class="service-card secondary-service">
-                    <div class="service-icon">⚡</div>
+                    <div class="service-icon">
+                        <img src="img/complementarios/tramites.png" alt="Trámite CFE" class="service-icon-img">
+                    </div>
                     <h4>Trámite CFE</h4>
                     <p>Gestionamos toda la documentación sin costo adicional.</p>
                 </div>
                 <div class="service-card secondary-service">
-                    <div class="service-icon">🔧</div>
+                    <div class="service-icon">
+                        <img src="img/complementarios/mantenimiento.png" alt="Mantenimiento" class="service-icon-img">
+                    </div>
                     <h4>Mantenimiento</h4>
                     <p>Servicio preventivo y correctivo especializado.</p>
                 </div>
                 <div class="service-card secondary-service">
-                    <div class="service-icon">📊</div>
+                    <div class="service-icon">
+                        <img src="img/complementarios/monitoreo.png" alt="Monitoreo Remoto" class="service-icon-img">
+                    </div>
                     <h4>Monitoreo Remoto</h4>
                     <p>Seguimiento en tiempo real de tu producción energética.</p>
                 </div>
                 <div class="service-card secondary-service">
-                    <div class="service-icon">💧</div>
+                    <div class="service-icon">
+                        <img src="img/complementarios/bombeo.png" alt="Bombeo Solar" class="service-icon-img">
+                    </div>
                     <h4>Bombeo Solar</h4>
                     <p>Sistemas de bombeo para aplicaciones agrícolas y ganaderas.</p>
                 </div>
                 <div class="service-card secondary-service">
-                    <div class="service-icon">🔋</div>
+                    <div class="service-icon">
+                        <img src="img/complementarios/aislados.png" alt="Sistemas Aislados" class="service-icon-img">
+                    </div>
                     <h4>Sistemas Aislados</h4>
                     <p>Independientes de la red con baterías y respaldo.</p>
                 </div>
@@ -430,7 +440,10 @@
                         </div>
                         <div class="form-row">
                             <label for="recibo_cfe" class="file-label">
-                                <span class="file-label-text">📄 Adjuntar Recibo de CFE (opcional)</span>
+                                <span class="file-label-text">
+                                    <img src="img/cfe.png" alt="CFE" class="cfe-logo">
+                                    Adjuntar Recibo de CFE (opcional)
+                                </span>
                                 <input type="file" id="recibo_cfe" name="recibo_cfe" accept=".pdf,.jpg,.jpeg,.png" class="file-input">
                                 <span class="file-selected" id="file-selected">Ningún archivo seleccionado</span>
                             </label>
