Se modifica calculadora

--- a/index.html
+++ b/index.html
@@ -361,8 +361,13 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <label for="tarifa">Tarifa CFE promedio ($/kWh)</label>
-                    <div class="tarifa-display" id="tarifa-display">$1.50</div>
+                    <div class="logo-calculator-section">
+                        <img src="img/logosf.png" alt="Ambiente Libre" class="logo-calculator-image">
+                        <div class="logo-calculator-content">
+                            <span class="logo-calculator-text">Ambiente Libre</span>
+                            <div class="logo-calculator-subtitle">Sistemas fotovoltaicos</div>
+                        </div>
+                    </div>
                     <input type="hidden" id="tarifa" value="1.50">
                 </div>
                 <button class="calculate-btn" onclick="calcularAhorro()">Calcular Ahorro</button>
