--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                         <div class="contact-icon">📱</div>
                         <div>
                             <strong>Teléfono</strong><br>
-                            <a href="tel:7712149628" style="color: #2c5282; text-decoration: none;">771 214 9628</a>
+                            <a href="tel:+527298250858" style="color: #2c5282; text-decoration: none;">729 825 0858</a>
                         </div>
                     </div>
 
@@ -408,7 +408,7 @@
                         <div class="contact-icon">📍</div>
                         <div>
                             <strong>Área de Servicio</strong><br>
-                            Hidalgo, CDMX, Estado de México, Puebla, Querétaro y Veracruz
+                            Hidalgo, CDMX, Estado de México, Puebla, Tlaxcala, Querétaro y Veracruz
                         </div>
                     </div>
 
@@ -424,7 +424,13 @@
 
                 <div class="contact-form-container">
                     <h3>Solicita tu Cotización Gratuita</h3>
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://formsubmit.co/ambientelibre.cotiza@outlook.com" method="POST" enctype="multipart/form-data">
+                        <!-- FormSubmit.co Configuration -->
+                        <input type="hidden" name="_subject" value="Nueva Cotización - Ambiente Libre">
+                        <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="#gracias" id="thanksUrl">
+                        
                         <div class="form-row">
                             <input type="text" name="nombre" placeholder="Nombre completo *" required>
                         </div>
@@ -455,7 +461,7 @@
                         <div class="form-row">
                             <textarea name="mensaje" placeholder="Mensaje adicional (opcional)"></textarea>
                         </div>
-                        <button type="submit" class="cta-button" style="width: 100%;">Enviar Solicitud</button>
+                        <button type="submit" class="cta-button" style="width: 100%;" id="submitBtn">Enviar Solicitud</button>
                     </form>
                 </div>
             </div>
@@ -496,9 +502,9 @@
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <ul>
-                        <li>📱 771 214 9628</li>
+                        <li>📱 729 825 0858</li>
                         <li>✉️ ambientelibre.cotiza@outlook.com</li>
-                        <li>📍 Servicio en Hidalgo, CDMX, EdoMex y Querétaro</li>
+                        <li>📍 Servicio en Hidalgo, CDMX, EdoMex, Querétaro, Puebla, Tlaxcala y Veracruz</li>
                     </ul>
                 </div>
             </div>
@@ -509,7 +515,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/527712149628?text=Hola, me interesa conocer más sobre los sistemas de energía solar" 
+    <a href="https://wa.me/527298250858?text=Hola, me interesa conocer más sobre los sistemas de energía solar" 
        class="whatsapp-float" target="_blank" title="Contactar por WhatsApp">
         <svg viewBox="0 0 24 24" class="whatsapp-icon">
             <path fill="currentColor" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516z"/>
